changes some views

--- a/views/schedule.haml
+++ b/views/schedule.haml
@@ -7,16 +7,16 @@
 		%label Fylla kylar
 		%input{:type=> "text", :name => "fridge"}
 	%div
-		%label Carring duty
+		%label Bära bardelar
 		%input{:type=> "text", :name => "carry"}
 	%div
-		%label Bar duty
+		%label Jobba i baren
 		%input{:type=> "text", :name => "bar"}
 	%div
-		%label Chef duty
+		%label Stå i köket
 		%input{:type=> "text", :name => "chef"}
 	%div
-		%label Cleanup duty
+		%label Städa efteråt
 		%input#clean{:type=> "text"}
 	%input{:type => "submit", :value => "spara"}
 	
