--- a/views/schedule.haml
+++ b/views/schedule.haml
@@ -1,8 +1,4 @@
-= @kroken.date
-%form{:method=> "post", :action=> "/booking"}
-	%input{:type=> "hidden", :name=> "id", :value=> @kroken.id}
-	%div
-		%label Working DA:
+%form#schedule{:method=> "post", :action=> "/booking"}
 	%div
 		%label Fylla kylar
 		%input{:type=> "text", :name => "fridge"}
@@ -17,6 +13,7 @@
 		%input{:type=> "text", :name => "chef"}
 	%div
 		%label Städa efteråt
-		%input#clean{:type=> "text"}
+		%input#clean{:type=> "text"}	
+	%a{:href=> "/"} Tillbaka
 	%input{:type => "submit", :value => "spara"}
 	
