fixed some encoding issues

--- a/views/remove_duty_form.haml
+++ b/views/remove_duty_form.haml
@@ -1,4 +1,5 @@
 %form{:method=> "post", :action=>'/remove'}
 	%input{:type=> "hidden", :name=> "_method", :value=> "delete"}
 	%input{:type=> "hidden", :name=> "id", :value=> "#{@duty.id}"}
-	%input{:type=> "submit", :value=> "#{@duty.worker} kan inte #{@duty.type}"}
+	%input{:type=> "submit", :value=> "#{make_sentence(@duty)}"}
+	
