--- a/views/index.haml
+++ b/views/index.haml
@@ -1,3 +1,4 @@
+-# encoding: ISO-8859-1
 .left-column
 	%form{:method=> "post", :action=> "/schedule"}
 		%input#datepicker{:type=> "text", :name=> "datepicker"}
