--- a/views/style.sass
+++ b/views/style.sass
@@ -15,7 +15,7 @@ body
   margin:
     left: auto
     right: auto
-  width: 70%
+  width: 80%
   #header
     h1
       font-size: 40px
@@ -33,6 +33,7 @@ body
         +left(3px)
       form
         +right(3px)
+        align: right
         width: 40%
     form#schedule
       div
@@ -54,5 +55,5 @@ body
       width: 35%
       +left(3px)
     .right-column
-      width: 60%
+      width: 63%
       +right(3px)
