--- a/views/style.scss
+++ b/views/style.scss
@@ -18,7 +18,7 @@ body
 		left: auto;
 		right: auto;
 	}
-	width: 70%;
+	width: 80%;
 	#header {
 		h1 {
 			font-size: 40px;
@@ -42,6 +42,7 @@ body
 			}
 			form {
 				@include right(3px);
+				align: right;
 				width: 40%;
 			}
 		}
@@ -72,7 +73,7 @@ body
 			@include left(3px);
 		}
 		.right-column {
-			width: 60%;
+			width: 63%;
 			@include right(3px);
 		}
 	}
