--- a/views/style.sass
+++ b/views/style.sass
@@ -28,29 +28,18 @@ body
   #content
     #krokar
       p
-        align: top
-        width: 55%
         +left(3px)
+        width: 54%
       form
-        +right(3px)
-        align: right
-        width: 40%
+        width: 45%
+        float: right
     form#schedule
       div
-        $height: 30px
         label
-          margin-top: 5px
-          align: top
-          height: $height
-          +left(3px)
-          width: 25%
+          float: left
+          width: 300px
         input
-          align: left
-          width: 30%
-      input
-        align: bottom
-      a
-        align: top
+          align: right
     .left-column
       width: 35%
       +left(3px)
