--- a/views/login.haml
+++ b/views/login.haml
@@ -5,3 +5,8 @@
 	%label Lösenord: 
 	%input{:type=> "password", :name=> "pass"}
 	%input{:type=> "submit", :value=> "Logga in"}
+%lu.ui-widget
+	%ul När du loggat in, klicka på "textskrivfältet".
+	%ul Du får nu välja ett datum
+	%ul När du gjort det klicka på schma och fyll i när du kan jobba.
+	%ul Knapparna där det står, "blbl kan inte tömma frysen" är till för att kunna ångra sig om man kommer på att man inte alls kunde jobba.
