Extended the authentication system, added a user-class to keep track of who does what. Added a VM-class also.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
 -# encoding: ISO-8859-1
-.left-column
+.search-form
 	%form{:method=> "post", :action=> "/schedule"}
 		%input#datepicker{:type=> "text", :name=> "datepicker"}
 		%input{:type=> "submit", :value=> "Schema"}
@@ -8,22 +8,7 @@
 		%h3
 			%a{:href=> "#"} Kröken #{kroken.date}
 		%div{:name=> "#{kroken.date}"}
-			-for duty in kroken.dutys
-				-if duty.type == "fridge"
-					%p Fylla kylen gör #{duty.worker}
-					= partial :remove_duty_form, duty
-				-if duty.type == "carry"
-					%p Bära barer gör  #{duty.worker}
-					= partial :remove_duty_form, duty
-				-if duty.type == "bar" 
-					%p Jobbar i baren gör #{duty.worker}
-					= partial :remove_duty_form, duty
-				-if duty.type == "chef" 
-					%p Basar i köket gör #{duty.worker}
-					= partial :remove_duty_form, duty
-				-if duty.type == "clean"
-					%p Städar efteråt gör #{duty.worker}
-					= partial :remove_duty_form, duty
+			=partial :kroken_partial, kroken
 
 :javascript
 	$(document).ready(function() {
