--- a/views/schedule.haml
+++ b/views/schedule.haml
@@ -16,6 +16,6 @@
 	%div
 		%label Städa efteråt
 		%input{:type=> "text", :name => "clean"}	
-	%a{:href=> "/"} Tillbaka
-	%input{:type => "submit", :value => "spara"}
+	%div
+		%input{:type => "submit", :value => "spara"}
 	
