--- a/views/style.sass
+++ b/views/style.sass
@@ -17,32 +17,43 @@ body
     right: auto
   width: 80%
   #header
+    #navbar
+      margin-bottom: 5px
+      width: 100%
+      +right(3px)
+      clear: left
+      .align-right
+        +right(3px)
+      .align-left
+        +left(3px)
     h1
       font-size: 40px
       text:
         align: center
-    a
-      margin:
-        right: auto
-        left: auto
   #content
     #krokar
+      width: 63%
+      +right(3px)
       p
         +left(3px)
         width: 54%
       form
         width: 45%
         float: right
-    form#schedule
-      div
-        label
-          float: left
-          width: 300px
-        input
-          align: right
-    .left-column
+    .search-form
       width: 35%
       +left(3px)
-    .right-column
-      width: 63%
+    form#schedule
+      div
+        width: 35%
+        clear: both
+        label
+          +left(3px)
+        input
+          +right(3px)
+  #footer
+    clear: both
+    float: bottom
+    a
+      margin-top: 6px
       +right(3px)
