--- a/views/remove_duty_form.haml
+++ b/views/remove_duty_form.haml
@@ -1,5 +1,6 @@
 -# encoding: ISO-8859-1
 %form{:method=> "post", :action=>'/remove'}
 	%input{:type=> "hidden", :name=> "_method", :value=> "delete"}
-	%input{:type=> "hidden", :name=> "id", :value=> "#{@duty.id}"}
+	%input{:type=> "hidden", :name=> "duty", :value=> "#{@duty}"}
+	%input{:type=> "hidden", :name=> "kroken_id", :value=> "#{@duty.kroken.id}"}
 	%input{:type=> "submit", :value=> "#{make_sentence(@duty)}"}
