--- a/views/style.scss
+++ b/views/style.scss
@@ -20,21 +20,29 @@ body
 	}
 	width: 80%;
 	#header {
+		#navbar {
+			margin-bottom: 5px;
+			width: 100%;
+			@include right(3px);
+			clear: left;
+			.align-right {
+				@include right(3px);
+			}
+			.align-left {
+				@include left(3px);
+			}
+		}
 		h1 {
 			font-size: 40px;
 			text: {
 				align: center;
 			}
 		}
-		a {
-			margin: {
-				right: auto;
-				left: auto;
-			}
-		}
 	}
 	#content {
 		#krokar {
+			width: 63%;
+			@include right(3px);
 			p {
 				@include left(3px);
 				width: 54%;
@@ -44,23 +52,28 @@ body
 				float: right;
 			}
 		}
+		.search-form {
+			width: 35%;
+			@include left(3px)
+		}
 		form#schedule {
 			div {
+				width: 35%;
+				clear: both;
 				label{
-					float: left;
-					width: 300px;
+					@include left(3px);
 				}
 				input {
-					align: right;
+					@include right(3px);
 				}
 			}
 		}
-		.left-column {
-			width: 35%;
-			@include left(3px);
-		}
-		.right-column {
-			width: 63%;
+	}
+	#footer {
+		clear: both;
+		float: bottom;
+		a {
+			margin-top: 6px;
 			@include right(3px);
 		}
 	}
