user can now change its password

--- a/views/admin.haml
+++ b/views/admin.haml
@@ -1,4 +1,5 @@
 -# encoding: ISO-8859-1
+%a{:href=> "/user/change"} Vill du byta lösenord?
 %form{:method=> 'post', :action=> "/user"}
 	%label Namn:
 	%input{:type=> "text", :name=> "user"}
