--- a/views/user.haml
+++ b/views/user.haml
@@ -1,3 +1,5 @@
 -# encoding: ISO-8859-1
-%h3.ui-widget Dina arbetspass:
-=partial :duties_partial, @duties
+%a{:href=> "/user/change"} Vill du byta lösenord?
+.ui-widget
+	%h3 Dina arbetspass:
+	=partial :duties_partial, @duties
