--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,7 @@
 %html
 	%head
 		%title DA
+		%meta{:"http-equiv" => "Content-Type", :content => "text/html; charset= ISO-8859-1" } 
 		%link{:rel=> "stylesheet", :type=> "text/css", :href=> 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/sunny/jquery-ui.css'}
 		%link{:rel=> "stylesheet", :type=> "text/css", :href=> '/style.css'}
 		%script{:type=> 'text/javascript', :src=> "http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"}
