--- a/views/user.haml
+++ b/views/user.haml
@@ -2,4 +2,4 @@
 %a{:href=> "/user/change"} Vill du byta lösenord?
 .ui-widget
 	%h3 Dina arbetspass:
-	=partial :duties_partial, @duties
+	=partial :"partials/duties_partial", @duties
