--- a/views/admin.haml
+++ b/views/admin.haml
@@ -7,4 +7,4 @@
 	%input{:type=> "text", :name=> "pass"}
 	%input{:type=> "submit", :value=> "Lägg till användare"}
 %a{:href=> "/remove/user"} Ta bort användare?
-=partial :duties_partial, @duties
+=partial :"partials/duties_partial", @duties
