--- a/views/style/style.scss
+++ b/views/style/style.scss
@@ -1,4 +1,80 @@
-/* style.scss */
+﻿@mixin left($dist) {
+	float: left;
+	margin-left: $dist;
+}
+@mixin right($dist) {
+	float: right;
+	margin-right: $dist;
+}
+
+body
+{
+	margin: 10px;
+	padding: 5px;
+}
 .page {
-  width: 50%;
+	position: relative;
+	margin: {
+		left: auto;
+		right: auto;
+	}
+	width: 80%;
+	#header {
+		#navbar {
+			margin-bottom: 5px;
+			width: 100%;
+			@include right(3px);
+			clear: left;
+			.align-right {
+				@include right(3px);
+			}
+			.align-left {
+				@include left(3px);
+			}
+		}
+		h1 {
+			font-size: 40px;
+			text: {
+				align: center;
+			}
+		}
+	}
+	#content {
+		#krokar {
+			width: 63%;
+			@include right(3px);
+			p {
+				@include left(3px);
+				width: 54%;
+			}
+			form {
+				width: 45%;
+				float: right;
+			}
+		}
+		.search-form {
+			width: 35%;
+			@include left(3px)
+		}
+		form#schedule {
+			div {
+				width: 35%;
+				clear: both;
+				label{
+					@include left(3px);
+				}
+				input {
+					@include right(3px);
+				}
+			}
+		}
+	}
+	#footer {
+		clear: both;
+		float: bottom;
+		a {
+			margin-top: 6px;
+			@include right(3px);
+		}
+	}
 }
