begin work on the beer system

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -14,6 +14,7 @@
 			#navbar
 				%a.align-right{:href=> "/personal"} Din persoliga sida
 				%a.align-right{:href=> "/"} Standardsidan
+				%a.align-right{:href=> "/orders"} Hämta ut alkohol
 				%a.align-left{:href=> "/logout"} Logga ut
 		#content= yield
 		#footer
