--- a/views/partials/kroken_partial.haml
+++ b/views/partials/kroken_partial.haml
@@ -1,6 +1,6 @@
 -# encoding: ISO-8859-1
 %dl
 -for vm in make_kroken_viewmodel(@kroken.date)
-	%dt #{vm.type}, #{vm.date}
+	%dt #{vm.type}
 	-for worker in vm.workers
 		%dd=worker
