--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,5 +1,4 @@
--# encoding: ISO-8859-1
-!!!
+ï»¿!!!
 %html
 	%head
 		%title DA
@@ -10,11 +9,11 @@
 		%script{:type=> 'text/javascript', :src=> "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"}
 	%body.page
 		#header
-			%h1.ui-widget.ui-widget-header Torsdags Kröken
+			%h1.ui-widget.ui-widget-header Torsdags KrÃ¶ken
 			#navbar
 				%a.align-right{:href=> "/personal"} Din persoliga sida
 				%a.align-right{:href=> "/"} Standardsidan
-				%a.align-right{:href=> "/orders"} Hämta ut alkohol
+				%a.align-right{:href=> "/orders"} HÃ¤mta ut alkohol
 				%a.align-left{:href=> "/logout"} Logga ut
 		#content= yield
 		#footer
