--- a/views/login.haml
+++ b/views/login.haml
@@ -1,12 +1,10 @@
--# encoding: ISO-8859-1
-%form{:method=> "post", :action=> "/login"}
+ï»¿%form{:method=> "post", :action=> "/login"}
 	%label Namn:
 	%input{:type=> "text", :name=> "user"}
-	%label Lösenord: 
+	%label LÃ¶senord: 
 	%input{:type=> "password", :name=> "pass"}
 	%input{:type=> "submit", :value=> "Logga in"}
 %lu.ui-widget
-	%ul När du loggat in, klicka på "textskrivfältet".
-	%ul Du får nu välja ett datum
-	%ul När du gjort det klicka på schma och fyll i när du kan jobba.
-	%ul Knapparna där det står, "blbl kan inte tömma frysen" är till för att kunna ångra sig om man kommer på att man inte alls kunde jobba.
+	%ul NÃ¤r du loggat in, klicka pÃ¥ "textskrivfÃ¤ltet".
+	%ul Du fÃ¥r nu vÃ¤lja ett datum
+	%ul NÃ¤r du gjort det klicka pÃ¥ schema och fyll i nÃ¤r du kan jobba.
