load of changes...

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
 ﻿.search-form
-	%form{:method=> "post", :action=> "/schedule"}
+	%form{:method=> "get", :action=> "/schedule"}
 		%input#datepicker{:type=> "text", :name=> "datepicker"}
 		%input{:type=> "submit", :value=> "Schema"}
 #krokar.right-column
