--- a/views/admin.haml
+++ b/views/admin.haml
@@ -1,4 +1,8 @@
 ﻿%a{:href=> "/user/change"} Vill du byta lösenord?
+%form{:method=> 'post', :action=> "/add/articles/to_db"}
+	%label Ange sökväg:
+	%input{:type=> "text", :name=> "path"}
+	%input{:type=> "submit", :value=> "Lägg till data"}
 %form{:method=> 'post', :action=> "/add/user"}
 	%label Namn:
 	%input{:type=> "text", :name=> "user"}
