--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,18 +2,17 @@
 %html
 	%head
 		%title DA
-		%meta{:"http-equiv" => "Content-Type", :content => "text/html; charset= ISO-8859-1" } 
+		%meta{:"http-equiv" => "Content-Type", :content => "text/html; charset= UTF-8" } 
 		%link{:rel=> "stylesheet", :type=> "text/css", :href=> 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/sunny/jquery-ui.css'}
-		%link{:rel=> "stylesheet", :type=> "text/css", :href=> '/style.css'}
+		%link{:rel=> "stylesheet", :type=> "text/css", :href=> '/css/style.css'}
 		%script{:type=> 'text/javascript', :src=> "http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"}
 		%script{:type=> 'text/javascript', :src=> "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"}
 	%body.page
 		#header
-			%h1.ui-widget.ui-widget-header Torsdags Kröken
+			%h1.ui-widget.ui-widget-header TorsdagsKröken
 			#navbar
-				%a.align-right{:href=> "/personal"} Din persoliga sida
+				%a.align-right{:href=> "/personal"} Din personliga sida
 				%a.align-right{:href=> "/"} Standardsidan
-				%a.align-right{:href=> "/orders"} Hämta ut alkohol
 				%a.align-left{:href=> "/logout"} Logga ut
 		#content= yield
 		#footer
