--- a/views/orders.haml
+++ b/views/orders.haml
@@ -1,1 +1,40 @@
-﻿
+﻿.ui-widget
+	%label Ölsort
+	%input#article{:type=> "text", :name=> "article", :charset=> "utf-8"}
+.ui-widget
+	%form#selected_articles{:method=> "post", :action=>"/make/order"}
+		%input{:type=> "hidden", :name=> "date", :value=> "#{@kroken_date}"}
+		%input{:type=> "submit", :value=> "Spara order"}
+:javascript
+	function log(message, article) {
+		$("<label>").text("Antal som hämtas ut:").insertAfter($("<label>").text(message).insertBefore($("<input type='text' charset='utf-8'>").attr('name', article).insertBefore($("<input type='button' value='Ta bort' onclick='remove(this)'>").appendTo($("<div>").appendTo("#selected_articles")))))
+	};
+	function remove(elem) {
+		$(elem).parent().remove();
+	};
+	$(document).ready(function () {
+		$("#article").autocomplete({
+				source: function (request, response) {
+								 $.ajax({
+									url: "/all_articles",
+									dataType: "jsonp",
+									data: {
+										featureClass: "P",
+										search: request.term
+									},
+									success: function(data) { 
+										response( $.map( data, function( item ) {
+										return {
+												label: item.name,
+												value: item.name + ", pris exkl. moms: " + item.price
+											}
+						}));
+									}
+								 });
+							},
+				minLength: 1,
+				select: function(event, ui) {
+									log(ui.item.value, ui.item.label)
+					}
+			});
+	});
