fixe some problems

--- a/views/schedule.haml
+++ b/views/schedule.haml
@@ -1,4 +1,4 @@
-﻿%h3 Kröken #{@date}
+﻿%h3.ui-widget Kröken #{@date}
 %form#schedule{:method=> "post", :action=> "/schedule"}
 	%input{:type=> "hidden", :name=> "date", :value=>"#{@date}"}
 	%div
