Added different roles to the user

--- a/views/admin.haml
+++ b/views/admin.haml
@@ -9,5 +9,6 @@
 	%label Lösen:
 	%input{:type=> "text", :name=> "pass"}
 	%input{:type=> "submit", :value=> "Lägg till användare"}
+	%input{:type=> "checkbox", :name=> "dc?"}
 %a{:href=> "/remove/user"} Ta bort användare?
 =partial :"partials/duties_partial", @duties
