--- a/views/login.haml
+++ b/views/login.haml
@@ -1,10 +1,10 @@
-Ôªø%form{:method=> "post", :action=> "/login"}
+%form{:method=> "post", :action=> "/login"}
 	%label Namn:
 	%input{:type=> "text", :name=> "user"}
-	%label L√∂senord: 
+	%label Lˆsenord: 
 	%input{:type=> "password", :name=> "pass"}
 	%input{:type=> "submit", :value=> "Logga in"}
 %lu.ui-widget
-	%ul N√§r du loggat in, klicka p√• "textskrivf√§ltet".
-	%ul Du f√•r nu v√§lja ett datum
-	%ul N√§r du gjort det klicka p√• schema och fyll i n√§r du kan jobba.
+	%ul N‰r du loggat in, klicka pÂ "textskrivf‰ltet".
+	%ul Du fÂr nu v‰lja ett datum
+	%ul N‰r du gjort det klicka pÂ schema och fyll i n‰r du kan jobba.
