--- a/views/remove_duty_form.haml
+++ b/views/remove_duty_form.haml
@@ -1,4 +1,4 @@
-﻿%form{:method=> "post", :action=>'/remove'}
+%form{:method=> "post", :action=>'/remove'}
 	%input{:type=> "hidden", :name=> "_method", :value=> "delete"}
 	%input{:type=> "hidden", :name=> "id", :value=> "#{@duty.id}"}
 	%input{:type=> "hidden", :name=> "kroken_id", :value=> "#{@duty.kroken.id}"}
