--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,10 +1,17 @@
 !!!
 %html
   %head
-    %title KSL
+    %title KS
     %link{:href=>"/css/1140.css", :rel=>"stylesheet", :type=>"text/css"}
+    %link{:href=>"/css/site.css", :rel=>"stylesheet", :type=>"text/css"}
     %script{:src => '/js/jquery-1.5.1.min.js', :type=> 'text/javascript'}
     %script{:src => '/js/jquery.tmpl.js', :type=> 'text/javascript'}
     %script{:src => '/js/knockout-1.1.2.js', :type=> 'text/javascript'}
   %body
-    =yield
+    #hd.container
+      .row
+        .threecol
+          %h1
+            %a{:hfref=>'/'} KårserviceÖstergötland
+    #bd.container
+      != yield
